Tests for search combobox

--- a/.gitignore
+++ b/.gitignore
@@ -37,7 +37,7 @@ geo-*.tar
 npm-debug.log
 /assets/node_modules/
 
-node_modules
-test-results
-playwright-report
+node_modules/
 
+/test-results/
+playwright-report/
