--- a/fly.toml
+++ b/fly.toml
@@ -21,6 +21,7 @@ kill_signal = 'SIGTERM'
           force_https = true
           auto_start_machines = true
           min_machines_running = 1
+          max_machines_running = 1
           processes = ['app']
 
   [http_service.concurrency]
@@ -29,6 +30,6 @@ kill_signal = 'SIGTERM'
     soft_limit = 1000
 
 [[vm]]
-  memory = '1gb'
+  memory = '512mb'
   cpu_kind = 'shared'
   cpus = 1
