--- a/fly.toml
+++ b/fly.toml
@@ -1,35 +1,37 @@
-# fly.toml app configuration file generated for geo-demo on 2025-06-22T11:11:06-07:00
-#
-# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
-#
-
-app = 'geo-demo'
-primary_region = 'sjc'
-kill_signal = 'SIGTERM'
+app = "geo-demo"
+primary_region = "sjc"
+kill_signal = "SIGTERM"
 
 [build]
 
 [deploy]
-  release_command = '/app/bin/migrate'
+  release_command = "/app/bin/migrate"
 
 [env]
-  PHX_HOST = 'geo-demo.fly.dev'
-  PORT = '8080'
+  PHX_HOST = "geo-demo.fly.dev"
+  PORT = "8080"
 
-        [http_service]
-          internal_port = 8080
-          force_https = true
-          auto_start_machines = true
-          min_machines_running = 1
-          max_machines_running = 1
-          processes = ['app']
+[[services]]
+  internal_port = 8080
+  protocol = "tcp"
+  auto_start_machines = true
+  min_machines_running = 1
+  max_machines_running = 1
 
-  [http_service.concurrency]
-    type = 'connections'
+  [[services.ports]]
+    handlers = ["http"]
+    port = 80
+
+  [[services.ports]]
+    handlers = ["tls", "http"]
+    port = 443
+
+  [services.concurrency]
+    type = "connections"
     hard_limit = 1000
     soft_limit = 1000
 
 [[vm]]
-  memory = '512mb'
-  cpu_kind = 'shared'
+  memory = "512mb"
+  cpu_kind = "shared"
   cpus = 1
